cargo-features = ["edition2024"]

[package]
name = "lazy-heap"
description = "A lazy heap allocator for Rust based on `slab_allocator_rs`."
repository = "https://github.com/kennystrawnmusic/lazy-heap"
version = "0.1.0-alpha.1"
edition = "2024"
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab_allocator_rs = "^1.0.2"
spin = "^0.9.8"
