[package]
name = "lazy-heap"
description = "A lazy heap allocator for Rust based on `slab_allocator_rs`."
repository = "https://github.com/kennystrawnmusic/lazy-heap"
version = "0.1.1-alpha.7"
edition = "2021"
license = "LGPL-3.0-or-later"
categories = [ "no-std", "memory-management" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab_allocator_rs = "^1.0.2"
spin = "^0.9.8"
